# petrobot-jsonstorage

./: Cargo.toml
migrations/: 20230408000000_jsons.sql
src/: main.rs
