[package]
name = "jsonstorage"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.13.0"
rocket = "0.5.0-rc.3"
shuttle-rocket = "0.13.0"
tokio = "1.27.0"
serde = "1.0.159"
shuttle-shared-db = { version = "0.13.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
sha2 = "0.10.6"
hex = "0.4.3"
